# Guess-Senpai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
apps/api/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 202411040001_create_users_sessions.py  202411070001_add_progress_tables.py  202411080001_create_user_recent_media.py  202411090001_create_media_title_index.py  202411090002_create_character_index.py
apps/api/src/app/: main.py
apps/api/src/app/core/: config.py  database.py
apps/api/src/app/db/: __init__.py  models.py
apps/api/src/app/puzzles/: engine.py  models.py
apps/api/src/app/routers/: auth.py  health.py  live.py  notifications.py  profile.py  puzzles.py
apps/api/src/app/services/: anidle_evaluator.py  anilist.py  animethemes.py  cache.py  character_index.py  character_pool.py  history_repository.py  notifications.py  preferences.py  progress.py  progress_repository.py  session.py  title_index.py
apps/api/tests/: conftest.py  test_database.py  test_database_config.py  test_main.py  test_poster_image.py  test_puzzles_engine.py  test_puzzles_router.py
apps/api/tests/services/: test_preferences.py  test_progress.py  test_title_index.py
apps/web/: Dockerfile  next-env.d.ts  next.config.mjs  package.json  tailwind.config.ts  vitest.setup.ts
apps/web/.next/: routes-manifest.json
apps/web/public/: manifest.webmanifest  service-worker.js
apps/web/src/: service-worker.ts
apps/web/types/: react.d.ts  (+1 more)
(+114 files in other folders)
