[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guesssenpai-api"
version = "0.1.0"
description = "FastAPI backend powering the GuessSenpai daily anime puzzles."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.4",
    "uvicorn[standard]==0.32.0",
    "httpx==0.27.2",
    "python-dateutil==2.9.0.post0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "redis==5.1.0",
    "itsdangerous==2.2.0",
    "SQLAlchemy[asyncio]==2.0.36",
    "asyncpg==0.29.0",
    "aiosqlite==0.20.0",
    "pywebpush==1.14.0",
    "Pillow==10.4.0",
    "opencv-python-headless==4.10.0.84",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.6.0",
]

[tool.setuptools]
packages = ["app"]
package-dir = { "" = "src" }
